--- a/index.html
+++ b/index.html
@@ -257,8 +257,8 @@
 <tr>
     <td>&lt;img&gt;</td>
     <td>image</td>
-    <td>&lt;img src="Earth.gif" width="41" height="41" border="0" alt="text describing the image" /&gt;</td>
-    <td><img src="Earth.gif" width="30%" 
+    <td>&lt;img src="earth.gif" width="41" height="41" border="0" alt="text describing the image" /&gt;</td>
+    <td><img src="earth.gif" width="30%" 
         height="100" border="0" alt="text describing 
         the image" /></td>
 </tr>
