--- a/index.html
+++ b/index.html
@@ -31,6 +31,19 @@
                 <td>&lt; a href = "http://www.youtube.com">Visit youtube&lt;/ a &gt;</td>
                 <td><a href = "https://www.youtube.com/" target="_blank" rel="noopener noreferrer" >Visit youtube</a></td>
             </tr>
+            <tr>
+                <td>&lt;title&gt;</td>
+                <td>document title</td>
+                <td>&lt;title&gt;Title of your HTML page&lt;/title&gt;</td>
+                <td>"Title of your web page will be viewable in the browser’s title bar"</td>
+            </tr>
+
+            <tr>
+                <td>&lt;head&gt;</td>
+                <td>document head</td>
+                <td>&lt;head&gt;Contains elements describing the document&lt;/head&gt;</td>
+                <td><a href = "https://www.w3schools.com/tags/tag_head.asp" target="_blank" rel="noopener noreferrer" >Click </a> to see how it looks like</td>
+            </tr>
 
              <tr>
                 <td>&lt; body &gt;</td>
@@ -38,6 +51,20 @@
                 <td>&lt; body &gt; The content of your html page &lt;/ body &gt;</td>
                 <td><a href = "https://www.w3schools.com/tags/tag_body.asp" target="_blank" rel="noopener noreferrer" >Click</a> to see a sample code</td>
             </tr>
+            <tr>
+    <td>&lt;html&gt;</td>
+    <td>HTML structure</td>
+    <td>
+        &lt;html&gt;<br>
+        &lt;head&gt;<br>
+        &lt;meta&gt;<br>
+        &lt;title&gt;Title of your web page&lt;/title&gt;<br>
+        &lt;/head&gt;<br>
+        &lt;body&gt;HTML web page contents&lt;/body&gt;<br>
+        &lt;/html&gt;
+    </td>
+    <td>"Displays the full contents of your web page"</td>
+</tr>
 
              <tr>
                 <td>&lt; br &gt;</td>
@@ -232,20 +259,7 @@
     <td>&lt;hr width="25%" color="#6699ff" size="6"&gt;</td>
     <td>"Contents of your web page "<hr width="25%" color="#6699ff" size="6">"Contents of your web page"</td>
 </tr>
-<tr>
-    <td>&lt;html&gt;</td>
-    <td>HTML structure</td>
-    <td>
-        &lt;html&gt;<br>
-        &lt;head&gt;<br>
-        &lt;meta&gt;<br>
-        &lt;title&gt;Title of your web page&lt;/title&gt;<br>
-        &lt;/head&gt;<br>
-        &lt;body&gt;HTML web page contents&lt;/body&gt;<br>
-        &lt;/html&gt;
-    </td>
-    <td>"Displays the full contents of your web page"</td>
-</tr>
+
 
 <tr>
     <td>&lt;i&gt;</td>
