--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <body>
         <h1 class="page-title">HTML LEARNING TOOL</h1>
         <p class="subtitle">A quick guide to commonly used HTML tags</p>
+        <p>Want to learn in detail ?<a href= "https://www.youtube.com/watch?v=qz0aGYrrlhU">click here</a></p>
         <table class="main-table" cellpadding = "10" cellspacing="2" bordercolor="black" width = 100% >
         <thead>
             <tr>
@@ -35,7 +36,8 @@
                 <td>&lt;title&gt;</td>
                 <td>document title</td>
                 <td>&lt;title&gt;Title of your HTML page&lt;/title&gt;</td>
-                <td>"Title of your web page will be viewable in the browser’s title bar"</td>
+                <td>"Title of your web page will be viewable in the browser’s title bar"
+                    <a href = "https://www.w3schools.com/TAGS/tag_title.asp" target="_blank" rel="noopener noreferrer" >more</a></td>
             </tr>
 
             <tr>
@@ -63,7 +65,8 @@
         &lt;body&gt;HTML web page contents&lt;/body&gt;<br>
         &lt;/html&gt;
     </td>
-    <td>"Displays the full contents of your web page"</td>
+    <td>"Displays the full contents of your web page" 
+    <a href = "https://www.w3schools.com/tags/tag_html.asp" target="_blank" rel="noopener noreferrer" >more</a></td>
 </tr>
 
              <tr>
@@ -139,6 +142,7 @@
                 <td>embed object</td>
                 <td><b>&lt; embed</b> src="yourfile.mid" width = "100%" height = "60" align="center" &gt;</td>
                 <td>"Displays an embedded audio player (MIDI) inside the page"
+                    <a href = "https://www.w3schools.com/TAGS/tag_embed.asp" target="_blank" rel="noopener noreferrer" >more</a></td>
                 </td>
             </tr>
 
@@ -455,7 +459,9 @@
       &lt;meta name="rating" content="General"&gt;<br>
       &lt;meta name="robots" content="noindex,follow"&gt;
     </td>
-    <td>Not visible in browser. Used for page info, refresh, SEO.</td>
+    <td>Not visible in browser. Used for page info, refresh, SEO.
+        <a href = "https://www.w3schools.com/tags/tag_meta.asp" target="_blank" rel="noopener noreferrer" >more</a>
+    </td>
   </tr>
   
   <tr>
