--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
        
     </head>
     <body>
+        <p text-align="right">Want to learn in detail ?<a href= "https://www.youtube.com/watch?v=qz0aGYrrlhU">click here</a></p>
         <h1 class="page-title">HTML LEARNING TOOL</h1>
         <p class="subtitle">A quick guide to commonly used HTML tags</p>
-        <p>Want to learn in detail ?<a href= "https://www.youtube.com/watch?v=qz0aGYrrlhU">click here</a></p>
         <table class="main-table" cellpadding = "10" cellspacing="2" bordercolor="black" width = 100% >
         <thead>
             <tr>
