--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <td>&lt;!--</td>
                 <td>comment</td>
                 <td>&lt;!--This can be viewed in the HTML part of a document--&gt;</td>
-                <td><a href = "https://www.w3schools.com/tags/tag_comment.asp" target="_blank" rel="noopener noreferrer" >Click </a> to see how comments look like</td>
+                <td><a href = "comments.html" target="_blank" rel="noopener noreferrer" >Click </a> for more explanation</td>
             </tr>
 
             <tr>
