--- a/index.html
+++ b/index.html
@@ -37,21 +37,21 @@
                 <td>document title</td>
                 <td>&lt;title&gt;Title of your HTML page&lt;/title&gt;</td>
                 <td>"Title of your web page will be viewable in the browser’s title bar"
-                    <a href = "https://www.w3schools.com/TAGS/tag_title.asp" target="_blank" rel="noopener noreferrer" >more</a></td>
+                    <a href = "title.html" target="_blank" rel="noopener noreferrer" >more</a></td>
             </tr>
 
             <tr>
                 <td>&lt;head&gt;</td>
                 <td>document head</td>
                 <td>&lt;head&gt;Contains elements describing the document&lt;/head&gt;</td>
-                <td><a href = "https://www.w3schools.com/tags/tag_head.asp" target="_blank" rel="noopener noreferrer" >Click </a> to see how it looks like</td>
+                <td><a href = "head.html" target="_blank" rel="noopener noreferrer" >Click </a> to see how it looks like</td>
             </tr>
 
              <tr>
                 <td>&lt; body &gt;</td>
                 <td>body of html document</td>
                 <td>&lt; body &gt; The content of your html page &lt;/ body &gt;</td>
-                <td><a href = "https://www.w3schools.com/tags/tag_body.asp" target="_blank" rel="noopener noreferrer" >Click</a> to see a sample code</td>
+                <td><a href = "body.html" rel="noopener noreferrer" >Click</a> to see a sample code</td>
             </tr>
             <tr>
     <td>&lt;html&gt;</td>
@@ -66,7 +66,7 @@
         &lt;/html&gt;
     </td>
     <td>"Displays the full contents of your web page" 
-    <a href = "https://www.w3schools.com/tags/tag_html.asp" target="_blank" rel="noopener noreferrer" >more</a></td>
+    <a href = "html_exp.html" target="_blank" rel="noopener noreferrer" >more</a></td>
 </tr>
 
              <tr>
@@ -142,7 +142,7 @@
                 <td>embed object</td>
                 <td><b>&lt; embed</b> src="yourfile.mid" width = "100%" height = "60" align="center" &gt;</td>
                 <td>"Displays an embedded audio player (MIDI) inside the page"
-                    <a href = "https://www.w3schools.com/TAGS/tag_embed.asp" target="_blank" rel="noopener noreferrer" >more</a></td>
+                    <a href = "embed_exp.html" target="_blank" rel="noopener noreferrer" >more</a></td>
                 </td>
             </tr>
 
@@ -434,7 +434,7 @@
       &lt;link rel="stylesheet" type="text/css" href="style.css" /&gt;<br>
       &lt;/head&gt;
     </td>
-    <td>"No visible output. Links external stylesheet." <a href = "https://www.w3schools.com/Css/" target="_blank" rel="noopener noreferrer" >Click </a>to learn more</td>
+    <td>"No visible output. Links external stylesheet." <a href = "css_exp.html" target="_blank" rel="noopener noreferrer" >Click </a>to learn more</td>
   </tr>
   
   <tr>
@@ -460,7 +460,7 @@
       &lt;meta name="robots" content="noindex,follow"&gt;
     </td>
     <td>Not visible in browser. Used for page info, refresh, SEO.
-        <a href = "https://www.w3schools.com/tags/tag_meta.asp" target="_blank" rel="noopener noreferrer" >more</a>
+        <a href = "meta_exp.html" target="_blank" rel="noopener noreferrer" >more</a>
     </td>
   </tr>
   
