--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <td>&lt;head&gt;</td>
                 <td>document head</td>
                 <td>&lt;head&gt;Contains elements describing the document&lt;/head&gt;</td>
-                <td><a href = "head.html" target="_blank" rel="noopener noreferrer" >Click </a> to see how it looks like</td>
+                <td><a href = "head_exp.html" target="_blank" rel="noopener noreferrer" >Click </a> to see how it looks like</td>
             </tr>
 
              <tr>
