--- a/index.html
+++ b/index.html
@@ -37,21 +37,21 @@
                 <td>document title</td>
                 <td>&lt;title&gt;Title of your HTML page&lt;/title&gt;</td>
                 <td>"Title of your web page will be viewable in the browser’s title bar"
-                    <a href = "title.html" target="_blank" rel="noopener noreferrer" >more</a></td>
+                    <a href = "title.html" target="_blank" rel="noopener noreferrer" >Click </a> for more explanation</td>
             </tr>
 
             <tr>
                 <td>&lt;head&gt;</td>
                 <td>document head</td>
                 <td>&lt;head&gt;Contains elements describing the document&lt;/head&gt;</td>
-                <td><a href = "head_exp.html" target="_blank" rel="noopener noreferrer" >Click </a> to see how it looks like</td>
+                <td><a href = "head_exp.html" target="_blank" rel="noopener noreferrer" >Click </a> for more explanation</td>
             </tr>
 
              <tr>
                 <td>&lt; body &gt;</td>
                 <td>body of html document</td>
                 <td>&lt; body &gt; The content of your html page &lt;/ body &gt;</td>
-                <td><a href = "body.html" rel="noopener noreferrer" >Click</a> to see a sample code</td>
+                <td><a href = "body.html" rel="noopener noreferrer" >Click </a> for more explanation</td>
             </tr>
             <tr>
     <td>&lt;html&gt;</td>
@@ -434,7 +434,7 @@
       &lt;link rel="stylesheet" type="text/css" href="style.css" /&gt;<br>
       &lt;/head&gt;
     </td>
-    <td>"No visible output. Links external stylesheet." <a href = "css_exp.html" target="_blank" rel="noopener noreferrer" >Click </a>to learn more</td>
+    <td>"No visible output. Links external stylesheet." <a href = "css_exp.html" target="_blank" rel="noopener noreferrer" >Click </a> for more explanation</td>
   </tr>
   
   <tr>
