--- a/title.html
+++ b/title.html
@@ -9,6 +9,7 @@
       background: #d7e3f4;
       margin: 0; padding: 20px;
       color: #0E0E52;
+      text-align: center;
     }
     .page-title {
       font-size: 2.5rem;
