--- a/comments.html
+++ b/comments.html
@@ -4,46 +4,35 @@
   <meta charset="UTF-8">
   <title>HTML Comments</title>
   <style>
-    /* Base styles */
     body {
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background-color: #d7e3f4;
-      margin: 0;
-      padding: 20px;
+      background: #d7e3f4;
+      margin: 0; padding: 20px;
       color: #0E0E52;
-    }
-
-    /* Page title */
-    .page-title {
       text-align: center;
+    }
+    .page-title {
       font-size: 2.5rem;
       margin-bottom: 5px;
-      color: #0E0E52;
       letter-spacing: 1px;
     }
-
-    /* Subtitle */
     .subtitle {
-      text-align: center;
       font-size: 1.1rem;
       color: #325A7A;
       margin-top: 0;
     }
-
-    /* Code block styling */
     pre {
-      background-color: #ffffff;
+      background: #fff;
       padding: 12px;
       border-radius: 5px;
-      box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
       overflow-x: auto;
-    }
-
-    code {
-      font-family: Consolas, monospace;
+      text-align: left;
+      max-width: 800px;
+      margin: 20px auto;
       color: #0E0E52;
+      font-family: Consolas, monospace;
     }
-
   </style>
 </head>
 <body>
