--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 <td>&lt; body &gt;</td>
                 <td>body of html document</td>
                 <td>&lt; body &gt; The content of your html page &lt;/ body &gt;</td>
-                <td><a href = "body.html" rel="noopener noreferrer" >Click </a> for more explanation</td>
+                <td><a href = "body.html" target="_blank" rel="noopener noreferrer" >Click </a> for more explanation</td>
             </tr>
             <tr>
     <td>&lt;html&gt;</td>
